# image-proxy

./: .dockerignore  .env.template  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
.github/agents/: rust-tester.agent.md
.github/workflows/: docker.yml  docs.yml  release.yml  test.yml
data/libjxl/: README.md  libjxl-dev_0.11.1_amd64.deb  libjxl-dev_0.11.2_amd64.deb  libjxl_0.11.1_amd64.deb  libjxl_0.11.2_amd64.deb
docs/: next.config.mjs  package.json
docs/content/docs/: api.mdx  caching.mdx  cdn.mdx  configuration.mdx  development.mdx  formats.mdx  index.mdx  installation.mdx  meta.json  metrics.mdx  security.mdx
docs/src/app/: global.css  layout.tsx
docs/src/app/(home)/: page.tsx
docs/src/app/docs/: layout.tsx
docs/src/app/docs/[[...slug]]/: page.tsx
docs/src/components/: search.tsx  view-options-popover.tsx
docs/src/lib/: shared.ts  source.ts
examples/: bench.rs  docker-compose.yml
src/: cache.rs  config.rs  lib.rs  logs.rs  main.rs  metrics.rs  preferred_formats.rs  utils.rs
src/api/: image.rs  metrics.rs  mod.rs
src/operations/: format.rs  mod.rs  pipeline.rs  resize.rs
src/utils/: decode.rs  encoding.rs  mime.rs  mod.rs  path.rs
tests/: allowed_formats.rs  api_integration.rs  auto_format.rs  basic_serving.rs  cache.rs  fallback.rs  headers.rs  metrics.rs  non_processable_formats.rs  security.rs  transformations.rs
tests/common/: mod.rs
