[package]
name = "image-proxy"
version = "0.12.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
awc = { version = "3.8.2", features = ["rustls"] }
foyer = "0.22.3"
futures-util = "0.3.31"
image = { version = "*", features = ["nasm", "avif-native"] }
mixtrics = { version = "0.2.3", features = ["prometheus"] }
prometheus = "0.14.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
webp = "0.3.1"

[profile.release-optimized]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1

[patch.crates-io]
image = { path = "./image" }
