[package]
name = "image-proxy"
version = "0.19.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1"
awc = { version = "3.8", features = ["rustls"] }
foyer = "0.22"
futures-util = "0.3"
image = { version = "*", features = ["nasm", "avif-native"] }
jpegxl-rs = { version = "=0.13.0" }
jpegxl-sys = { version = "=0.12.0" }
mixtrics = { version = "0.2", features = ["prometheus"] }
prometheus = "0.14"
tokio = { version = "1.51", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webp = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
lto = true

[patch.crates-io]
image = { path = "./image", version = "0.25.8" }
