[package]
name = "image-proxy"
version = "0.24.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1"
awc = { version = "3.8", features = ["rustls"] }
bytes = { version = "1", features = ["serde"] }
foyer = { path = "./foyer/foyer", features = ["serde"] }
futures-util = "0.3"
image = { version = "*", features = ["nasm", "avif-native"] }
jpegxl-rs = { version = "=0.14.0+libjxl-0.11.2" }
jpegxl-sys = { version = "=0.12.1+libjxl-0.11.2" }
mixtrics = { version = "0.2", features = ["prometheus"] }
prometheus = "0.14"
tokio = { version = "1.51", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webp = "0.3"
hotpath = "0.18"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-cpu = ["hotpath/hotpath-cpu"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

[dev-dependencies]
tempfile = "3"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
lto = "thin"

[patch.crates-io]
image = { path = "./image", version = "0.25.8" }
